--- a/index.html
+++ b/index.html
@@ -10,35 +10,45 @@
       <div id="front" class="album">
         <div id="title-box">
 
-          <!-- Level 4 'PHARRELL WILLIAMS' Header -->
+          <header><H4>PHARRELL WILLIAMS</H4><!-- Level 4 'PHARRELL WILLIAMS' Header -->
 
-          <!-- Level 2 'HAPPY' Header -->
+          <!-- Level 2 'HAPPY' Header --><H2>HAPPY</H2>
 
-          <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
+          <!-- Level 4 '| FROM DESPICABLE ME...' Header --><H4>FROM DESPICABLE ME 2</H4></header>
+    
 
         </div>
       </div>
 
       <div id="back" class="album">
 
-        <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
+        <!-- Level 3 '| FROM DESPICABLE ME...' Header --><h3>| FROM DESPICABLE ME 2 |</h3>
 
-        <!-- Level 1 'HAPPY' Header -->
+        <!-- Level 1 'HAPPY' Header --><h1>HAPPY</h1>
 
-        <!-- Level 3 'WRITTEN BY...' Header -->
+        <!-- Level 3 'WRITTEN BY...' Header --><h3>WRITTEN BY PHARRELL WILLIAMS</h3>
 
-        <!-- pararaph text 'PUBLISHED BY...' -->
+        <!-- pararaph text 'PUBLISHED BY...' --><p>PUBLISHED BY EMI APRIL MUSIC, INC. OBO ITSELF AND MORE WATERFROM NAZARETH (ASCAP) / UNIVERSAL PICTURES MUSIC (ASCAP) | BACKGROUND VOCALS PERFORMED BY RHEA DUMMETT, TREVON HENDERSON, ASHLEY L. LEE, SHAMIKA HIGHTOWER, JASMINE MURRAY AND TERRENCE ROLLE | PRODUCED BY PHARRELL WILLIAMS | RECORDED BY MIKE LARSON FOR I AM OTHER ENTERTAINMENT AT CIRCLE HOUSE STUDIOS, MIAMI, FL | ASSISTED BY MATTHEW DESRAMEAUX | DIGITAL EDITING AND ARRANGEMENT BY ANDREW COLEMAN AND MIKE LARSON FOR I AM OTHER ENTERTAINMENT | MIXED BY LESLIE BRATHWAITE AT MUSIC BOX STUDIOS, ATLANTA, GA.</p>
 
-        <!-- span text 'PHARRELLWILLIAMS.COM' -->
+        <!-- span text 'PHARRELLWILLIAMS.COM' --><span>PHARRELLWILLIAMS.COM</span>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
+        <img
+        src="https://s3.amazonaws.com/learn-verified/columbia-logo.png"
+        alt="Colombia Records Logo"/>
+        
 
         <!-- span text 'COLUMBIARECORDS.COM' -->
+        <span 
+        id="columbiarecords.com"
+        style="background-color: ;yellow"> COLUMBIARECORDS.COM</span>
 
         <br>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
-
+      <img 
+        src="https://s3.amazonaws.com/learn-verified/sony-logo.png"
+        alt="Sony Company Logo"/>
       </div>
     </div>
   </body>
